tabs are working, but now there's a scrollbar bug

--- a/style/style.css
+++ b/style/style.css
@@ -12,35 +12,53 @@ body{
 }
 /* toolbars div is the top 150px of the screen */
 #toolbars {
-  background-color: green;
+  background-color: #99ccff;
   width: 100%;
   height: 150px;
 
 }
 /* canvas-area div is the remaining area of the screen */
 #canvas-area {
-  background-color: red;
+  background-color: #e6e6e6;
   width: 100%;
   height: calc(100% - 150px);
 
 }
 #canvas {
+  background-color: white;
   cursor: crosshair;
-  border: 1px solid;
+  box-shadow: 0px 0px 0px 1px #000000 inset;
 }
 
 .tab {
-  height: 30px;
   min-width: 50px;
   max-width: 150px;
-  background-color: grey;
-  outline: solid 1px;
+  height: 30px;
   flex-grow: 1;
 }
+
+.tabcontent {
+  display: none;
+  
+}
+
+.tablink {
+  display: block;
+  box-shadow: 0px 0px 0px 1px #000000 inset;
+  background-color: #80b3ff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: black;
+  text-decoration: none;
+}
+
 .tab-area {
+  list-style-type: none;
   display: flex;
   height: 30px;
   width: 100%;
-  background-color: grey;
-  outline: solid 1px;
+  padding-left: 0px;
+  background-color: #8080ff;
+  box-shadow: 0px 0px 0px 1px #000000 inset;
 }
